--- a/nn/generate_data.ipynb
+++ b/nn/generate_data.ipynb
@@ -1,13 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "1ef9941165adf2c4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-02T19:02:47.127650Z",
      "start_time": "2024-05-02T19:02:46.722633Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import chess\n",
     "import chess.pgn\n",
@@ -17,19 +20,19 @@
     "import numpy as np\n",
     "from tqdm.auto import tqdm\n",
     "import pandas as pd"
-   ],
-   "id": "1ef9941165adf2c4",
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "10d38c578b38814",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-02T19:02:47.696148Z",
      "start_time": "2024-05-02T19:02:47.690610Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "DATA_DIR = \"data/\"\n",
     "STOCKFISH_DIR = 'stockfish/'\n",
@@ -51,55 +54,55 @@
     "STOCKFISH_AVX512_EXE = STOCKFISH_DIR + STOCKFISH_AVX512\n",
     "\n",
     "SAMPLE_BITBOARD_FILE = BITBOARD_DIR + SAMPLE_BITBOARD "
-   ],
-   "id": "10d38c578b38814",
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-01T10:36:49.950228Z",
      "start_time": "2024-05-01T10:36:49.732479Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "![ ! -f $SAMPLE_ZIP_FILE ] && wget $ELITE_DATA_SAMPLE_URL -P $ARCHIVE_DIR\n",
     "![ ! -f $SAMPLE_PGN_FILE ] && unzip $SAMPLE_ZIP_FILE -d $DATA_DIR"
-   ],
-   "id": "initial_id",
-   "outputs": [],
-   "execution_count": 60
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4b50830b334892a9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-01T10:39:53.876216Z",
      "start_time": "2024-05-01T10:39:53.660807Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "![ ! -f $STOCKFISH_AVX512_TAR ] && wget $STOCKFISH_AVX512_URL\n",
     "![ ! -f $STOCKFISH_AVX512_EXE ] && tar -xf $STOCKFISH_AVX512_TAR"
-   ],
-   "id": "4b50830b334892a9",
-   "outputs": [],
-   "execution_count": 69
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "63ca2cd8226ab9f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-01T09:56:50.114488Z",
      "start_time": "2024-05-01T09:56:50.110053Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "class PGNProvider:\n",
     "    \n",
-    "    def __init__(self, path : str, limit : int = None):\n",
+    "    def __init__(self, path : str, skip : int = 0):\n",
     "        c = 0\n",
     "        for line in open(path, \"r\"):\n",
     "            if line == '\\n':\n",
@@ -108,20 +111,25 @@
     "        self.len = (c + 1) // 2\n",
     "        self.read_count = 0\n",
     "        self.pgn_file = open(path, \"r\")\n",
-    "        self.limit = limit if limit is not None else 1000000000\n",
+    "\n",
+    "        if skip >= self.len:\n",
+    "            raise Exception(\"Not enough games to skip\")\n",
+    "        \n",
+    "        for _ in range(skip):\n",
+    "            while self.pgn_file.readline() != '\\n': pass\n",
+    "            while self.pgn_file.readline() != '\\n': pass\n",
+    "            self.len -= 1\n",
     "    \n",
     "    def __iter__(self):\n",
     "        return self\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return self.len if self.limit is None else self.limit\n",
+    "        return self.len\n",
     "    \n",
     "    def __next__(self):\n",
-    "        if self.read_count >= self.limit:\n",
-    "            raise StopIteration\n",
     "        pgn_string = \"\"\n",
     "        c = False\n",
-    "        \n",
+    "\n",
     "        while True:\n",
     "            line = self.pgn_file.readline()\n",
     "            \n",
@@ -138,27 +146,27 @@
     "    \n",
     "    def __str__(self):\n",
     "        return f\"Read positions : {self.read_count} Limit : {self.limit} PGN file : {self.pgn_file}\""
-   ],
-   "id": "63ca2cd8226ab9f0",
-   "outputs": [],
-   "execution_count": 33
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4a92cda6044d7d19",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-01T12:19:45.094664Z",
      "start_time": "2024-05-01T12:19:43.542251Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "class DataGenerator:\n",
     "\n",
-    "    def __init__(self, pgn_path : str, engine_path : str, pos_limit : int, avoid_repetitions : bool = True):\n",
+    "    def __init__(self, pgn_path : str, engine_path : str, pos_limit : int, skip : int = 0, avoid_repetitions : bool = True):\n",
     "        self.pgn_file = pgn_path\n",
     "        self.pos_limit = pos_limit\n",
     "        self.avoid_repetitions = avoid_repetitions\n",
-    "        self.pgn_provider = PGNProvider(pgn_path, limit=pos_limit)\n",
+    "        self.pgn_provider = PGNProvider(pgn_path, skip=skip)\n",
     "        self.signatures = set()\n",
     "        self.pos_total = 0\n",
     "        self.pos_written = 0\n",
@@ -234,20 +242,20 @@
     "                result.append(int(game.board().pieces(piece, side)))\n",
     "        return tuple(result)\n",
     "\n",
-    "data_generator = DataGenerator(SAMPLE_PGN_FILE, STOCKFISH_AVX512_EXE, pos_limit=100000)"
-   ],
-   "id": "4a92cda6044d7d19",
-   "outputs": [],
-   "execution_count": 274
+    "data_generator = DataGenerator(SAMPLE_PGN_FILE, STOCKFISH_AVX512_EXE, skip=144100, pos_limit=10000)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 297,
+   "id": "4d13fccf2bb2762",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-01T21:16:57.375750Z",
      "start_time": "2024-05-01T21:16:57.373470Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# data_generator.write(SAMPLE_BITBOARD_FILE)\n",
     "# Writing header...\n",
@@ -259,37 +267,78 @@
     "# Read 117526 positions total\n",
     "# Written 100000 positions\n",
     "# Games : 1441\n"
-   ],
-   "id": "4d13fccf2bb2762",
-   "outputs": [],
-   "execution_count": 297
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "b64100f5-972a-4a89-9a72-310438130894",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing header...\n",
+      "Done\n",
+      "Writing boards...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "505069934a6a462e910afb748c80ebc0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Positions:   0%|          | 0/10000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "Read 11180 positions total\n",
+      "Written 10000 positions\n",
+      "Games : 137\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_generator.write(SAMPLE_BITBOARD_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "41c71f57dbbc41e3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-02T19:02:56.291473Z",
      "start_time": "2024-05-02T19:02:55.942310Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "bdf = pd.read_csv(SAMPLE_BITBOARD_FILE, sep=\";\", dtype=\"uint64\", usecols=range(12))\n",
     "metadf = pd.read_csv(SAMPLE_BITBOARD_FILE, sep=\";\", usecols=range(12,15))"
-   ],
-   "id": "41c71f57dbbc41e3",
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "177d07c4df4da7e8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-02T19:04:31.894013Z",
      "start_time": "2024-05-02T19:04:31.884588Z"
     }
    },
-   "cell_type": "code",
-   "source": "metadf['draw'].to_numpy().size",
-   "id": "177d07c4df4da7e8",
    "outputs": [
     {
      "data": {
@@ -302,18 +351,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "source": [
+    "metadf['draw'].to_numpy().size"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 296,
+   "id": "2b8d464f0bbd89e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-01T21:16:24.663851Z",
      "start_time": "2024-05-01T21:16:24.659999Z"
     }
    },
-   "cell_type": "code",
-   "source": "metadf['draw'].mean()",
-   "id": "2b8d464f0bbd89e0",
    "outputs": [
     {
      "data": {
@@ -326,34 +377,36 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 296
+   "source": [
+    "metadf['draw'].mean()"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f846b1a0b754b8c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-02T19:26:31.961178Z",
      "start_time": "2024-05-02T19:26:31.955270Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "def pd_bitboard_to_numpy(df : pd.DataFrame) -> np.ndarray :\n",
     "    return np.unpackbits(np.ascontiguousarray(df.to_numpy()).view(np.uint8), axis=1)"
-   ],
-   "id": "f846b1a0b754b8c2",
-   "outputs": [],
-   "execution_count": 11
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b3df2f5a6488671d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-02T19:26:33.767039Z",
      "start_time": "2024-05-02T19:26:33.727764Z"
     }
    },
-   "cell_type": "code",
-   "source": "pd_bitboard_to_numpy(bdf)",
-   "id": "b3df2f5a6488671d",
    "outputs": [
     {
      "data": {
@@ -372,26 +425,73 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "source": [
+    "pd_bitboard_to_numpy(bdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b3316851-5a0b-4f77-a792-ad41f53e7dfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "a bytes-like object is required, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m123\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: a bytes-like object is required, not 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"test\", \"wb\") as f:\n",
+    "    f.write(\"123\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fc064f19-dedc-4f46-a23a-270d1262e57b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x01\\xe0\\xf3'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 123123\n",
+    "a.to_bytes(length=3)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
