Generate new dataset with 1M entries

--- a/nn/generate_data.ipynb
+++ b/nn/generate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "1ef9941165adf2c4",
    "metadata": {
     "ExecuteTime": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 124,
    "id": "10d38c578b38814",
    "metadata": {
     "ExecuteTime": {
@@ -43,7 +43,9 @@
     "\n",
     "SAMPLE_ZIP = \"lichess_elite_2021-11.zip\"\n",
     "SAMPLE_PGN = \"lichess_elite_2021-11.pgn\"\n",
-    "SAMPLE_BITBOARD = \"elite_bitboard.csv\"\n",
+    "SAMPLE_BITBOARD = \"100k_0-1441.csv\"\n",
+    "BITBOARD_1M = \"1M.csv\"\n",
+    "BITBOARD_10M = \"10M.csv\"\n",
     "ELITE_DATA_SAMPLE_URL = ELITE_DATA_BASE_URL + SAMPLE_ZIP\n",
     "SAMPLE_ZIP_FILE = ARCHIVE_DIR + SAMPLE_ZIP\n",
     "SAMPLE_PGN_FILE  = DATA_DIR + SAMPLE_PGN\n",
@@ -53,12 +55,17 @@
     "STOCKFISH_AVX512_URL = STOCKFISH_DOWNSTREAM + STOCKFISH_AVX512_TAR\n",
     "STOCKFISH_AVX512_EXE = STOCKFISH_DIR + STOCKFISH_AVX512\n",
     "\n",
-    "SAMPLE_BITBOARD_FILE = BITBOARD_DIR + SAMPLE_BITBOARD "
+    "LICHESS_EVAL_DB = ARCHIVE_DIR + \"lichess_db_eval.jsonl.zst\"\n",
+    "LICHESS_EVAL_JSONL = DATA_DIR + \"lichess_db_eval.jsonl\"\n",
+    "\n",
+    "SAMPLE_BITBOARD_FILE = BITBOARD_DIR + SAMPLE_BITBOARD\n",
+    "BITBOARD_10M_FILE = BITBOARD_DIR + BITBOARD_10M\n",
+    "BITBOARD_1M_FILE = BITBOARD_DIR + BITBOARD_1M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -74,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "4b50830b334892a9",
    "metadata": {
     "ExecuteTime": {
@@ -90,7 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
+   "id": "d197a5c0-5c50-4a47-a588-e59d70674952",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "![ ! -f $LICHESS_EVAL_DB ] && wget \"https://database.lichess.org/lichess_db_eval.jsonl.zst\" -P $ARCHIVE_DIR\n",
+    "![ ! -f $LICHESS_EVAL_JSONL ] && unzstd -c $LICHESS_EVAL_DB >> $LICHESS_EVAL_JSONL\n",
+    "#!sed -i 's/\"line\":\"[^\"]*\"/\"line\":\"\"/g' $LICHESS_EVAL_JSONL # remove not needed lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "63ca2cd8226ab9f0",
    "metadata": {
     "ExecuteTime": {
@@ -150,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "4a92cda6044d7d19",
    "metadata": {
     "ExecuteTime": {
@@ -172,7 +191,7 @@
     "        self.pos_written = 0\n",
     "        self.games = 0\n",
     "        self.engine = chess.engine.SimpleEngine.popen_uci(engine_path)\n",
-    "        self.engine.configure({\"Threads\" : 16, \"Hash\" : 1024})\n",
+    "        self.engine.configure({\"Threads\" : 12, \"Hash\" : 1024})\n",
     "\n",
     "    def write(self, out_file : str):\n",
     "        print(\"Writing header...\")\n",
@@ -219,7 +238,7 @@
     "        if bitboards in self.signatures:\n",
     "            return 0\n",
     "        self.signatures.add(bitboards)        \n",
-    "        info = self.engine.analyse(game.board(), chess.engine.Limit(time=0.1))\n",
+    "        info = self.engine.analyse(game.board(), chess.engine.Limit(time=0))\n",
     "        score = info['score']\n",
     "        if score.is_mate():\n",
     "            return 0\n",
@@ -242,7 +261,123 @@
     "                result.append(int(game.board().pieces(piece, side)))\n",
     "        return tuple(result)\n",
     "\n",
-    "data_generator = DataGenerator(SAMPLE_PGN_FILE, STOCKFISH_AVX512_EXE, skip=144100, pos_limit=10000)"
+    "data_generator = DataGenerator(SAMPLE_PGN_FILE, STOCKFISH_AVX512_EXE, skip=7000, pos_limit=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "da3aef17-0ff7-4d17-9e9f-1717d8dda222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing header...\n",
+      "Done\n",
+      "Writing boards...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9cbaf2b930ae4729be233f48b7131e33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Positions:   0%|          | 0/1000000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "Read 0 positions total\n",
+      "Written 1000000 positions\n",
+      "Games : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DataGeneratorFEN:\n",
+    "\n",
+    "    def __init__(self, fen_path : str, pos_limit : int, skip : int = 0):\n",
+    "        self.fen_file = fen_path\n",
+    "        self.pos_limit = pos_limit\n",
+    "        self.pos_total = 0\n",
+    "        self.pos_written = 0\n",
+    "        self.games = 0\n",
+    "        self.reader = pd.read_json(LICHESS_EVAL_JSONL, lines=True, chunksize=10000)\n",
+    "        self.header = [\"draw\", \"score\", \"mate\", \"white\", \"fen\"]\n",
+    "\n",
+    "    def write(self, out_file : str):\n",
+    "        print(\"Writing header...\")\n",
+    "        self.write_header(out_file)\n",
+    "        print(\"Done\")\n",
+    "        print(\"Writing boards...\")\n",
+    "        with tqdm(total=self.pos_limit, position=0, leave=True, desc=\"Positions\") as pbar:\n",
+    "            for chunk in self.reader:\n",
+    "                for i in range(len(chunk)):\n",
+    "                    game_info = chunk.iloc[i]\n",
+    "                    board = chess.Board(game_info['fen'])\n",
+    "                    mate = 0\n",
+    "                    if \"cp\" in game_info['evals'][0]['pvs'][0]:\n",
+    "                        score = game_info['evals'][0]['pvs'][0]['cp']\n",
+    "                    else:\n",
+    "                        score = game_info['evals'][0]['pvs'][0]['mate']\n",
+    "                        mate = 1\n",
+    "                    self.write_pos(out_file, board, score, mate)\n",
+    "                    self.pos_written += 1\n",
+    "                    if self.pos_written >= self.pos_limit: break\n",
+    "                pbar.update(len(chunk))\n",
+    "                if self.pos_written >= self.pos_limit: break\n",
+    "                \n",
+    "        print(\"Done\")\n",
+    "        print(f\"Read {self.pos_total} positions total\")\n",
+    "        print(f\"Written {self.pos_written} positions\")\n",
+    "        print(f\"Games : {self.games}\")\n",
+    "\n",
+    "    def write_header(self, out_file : str) -> None:\n",
+    "        header = []\n",
+    "        for side in chess.COLORS:\n",
+    "            for piece in chess.PIECE_TYPES:\n",
+    "                curr_piece = chess.piece_symbol(piece)\n",
+    "                if side == chess.WHITE:\n",
+    "                    header.append(curr_piece.upper())\n",
+    "                else:\n",
+    "                    header.append(curr_piece)\n",
+    "        header += self.header\n",
+    "        with open(out_file, \"w\") as f:\n",
+    "            f.write(\";\".join(header) + \"\\n\")\n",
+    "\n",
+    "    def write_pos(self, out_file : str, board : chess.Board, score : int, mate : int) -> int:\n",
+    "        content = []\n",
+    "        bitboards = self.board_to_bitboard(board)\n",
+    "        fen = board.fen()\n",
+    "        draw = 1 if -50 <= score <= 50 else 0\n",
+    "        \n",
+    "        for bitboard in bitboards:\n",
+    "            content.append(str(bitboard))\n",
+    "        content += [str(draw), str(score), str(mate), str(int(board.turn)), fen]\n",
+    "        with open(out_file, \"a\") as f:\n",
+    "            f.write(\";\".join(content) + \"\\n\")\n",
+    "        return 1\n",
+    "    \n",
+    "    def board_to_bitboard(self, board : chess.Board) -> tuple[int]:\n",
+    "        result = []\n",
+    "        for side in chess.COLORS:\n",
+    "            for piece in chess.PIECE_TYPES:\n",
+    "                result.append(int(board.pieces(piece, side)))\n",
+    "        return tuple(result)\n",
+    "\n",
+    "d = DataGeneratorFEN(LICHESS_EVAL_JSONL, 1000000)\n",
+    "d.write(BITBOARD_1M_FILE)"
    ]
   },
   {
@@ -271,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "id": "b64100f5-972a-4a89-9a72-310438130894",
    "metadata": {},
    "outputs": [
@@ -287,7 +422,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "505069934a6a462e910afb748c80ebc0",
+       "model_id": "785278d0aeef497bb1f1074001b9f880",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,19 +438,19 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Read 11180 positions total\n",
+      "Read 10898 positions total\n",
       "Written 10000 positions\n",
-      "Games : 137\n"
+      "Games : 139\n"
      ]
     }
    ],
    "source": [
-    "data_generator.write(SAMPLE_BITBOARD_FILE)"
+    "data_generator.write(\"test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "41c71f57dbbc41e3",
    "metadata": {
     "ExecuteTime": {
@@ -331,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "177d07c4df4da7e8",
    "metadata": {
     "ExecuteTime": {
@@ -346,7 +481,7 @@
        "100000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 19,
    "id": "2b8d464f0bbd89e0",
    "metadata": {
     "ExecuteTime": {
@@ -372,7 +507,7 @@
        "0.36333"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "f846b1a0b754b8c2",
    "metadata": {
     "ExecuteTime": {
@@ -399,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "b3df2f5a6488671d",
    "metadata": {
     "ExecuteTime": {
@@ -420,7 +555,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,48 +566,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "b3316851-5a0b-4f77-a792-ad41f53e7dfd",
+   "execution_count": 47,
+   "id": "4e9eee81-15ee-4a1e-94b9-e4483597b381",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "a bytes-like object is required, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m123\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: a bytes-like object is required, not 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(\"test\", \"wb\") as f:\n",
-    "    f.write(\"123\")"
+    "reader = pd.read_json(LICHESS_EVAL_JSONL, lines=True, chunksize=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "fc064f19-dedc-4f46-a23a-270d1262e57b",
+   "execution_count": 69,
+   "id": "ac5abf0f-c3e1-45fe-b9dd-56537ff30cfc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "b'\\x01\\xe0\\xf3'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fen         r1b5/4kq2/p1Bbp1Qp/6p1/8/4B1P1/PPP4P/6K1 w - -\n",
+      "evals    [{'pvs': [{'cp': 778, 'line': ''}], 'knodes': ...\n",
+      "Name: 24, dtype: object\n"
+     ]
     }
    ],
    "source": [
-    "a = 123123\n",
-    "a.to_bytes(length=3)"
+    "for i in range(1):\n",
+    "    print(next(reader).iloc[0])"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "4ee904f5-7d1a-4dda-b45d-469dff692484",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -491,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
